Cleaned up OT tests